# HuffArch

./: CMakeLists.txt  README.md
include/: archiver.h  argparser.h  exceptions.h  letterstable.h  node.h  reader.h  tree.h  writer.h
src/: archiver.cpp  argparser.cpp  exceptions.cpp  letterstable.cpp  main.cpp  node.cpp  reader.cpp  tree.cpp  writer.cpp
test/: test.cpp
